--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -85,7 +85,7 @@ Due to changes in how the Kotlin 2 compiler handles script compilation, you can 
 If they are used to reference the DSL script target object, then use `project`, `settings`, or `gradle` instead.
 If they are used to reference a top-level symbol that happens to have the same name as a nested symbol, then use a different name, possibly by adding an intermediary variable.
 
-Continue reading the link:#jspecify[JSpecify section] below to learn about potential breaking changes in Kotlin build logic code related to nullability.
+Read the link:#jspecify[JSpecify section] below to learn about potential breaking changes in Kotlin build logic code related to nullability.
 
 [[jspecify]]
 ==== Gradle API now uses JSpecify nullability annotations
