--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_dependencies.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_dependencies.adoc
@@ -206,7 +206,7 @@ When using multiple repositories, use <<filtering_repository_content.adoc#reposi
 
 === Explanation
 
-If you use more than one repository, you should use content filtering to make sure you take the right artifacts from the right repository by using a content filter.
+If your build declares more than one repository, you should also declare content filters on these repositories to ensure you search for and obtain dependencies from the correct place.
 The repository that contains the remaining artifacts should come at the end, so we only query it if we don’t find the included modules in the other repositories.
 Another option is to use the <<filtering_repository_content.adoc#sec:declaring-content-repositories,exclusiveContent>> if you are able to. Here, the order doesn’t matter.
 Content filtering has three main benefits:
