--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_dependencies.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_dependencies.adoc
@@ -202,18 +202,19 @@ include::sample[dir="snippets/bestPractices/settingsRepositories-do/groovy",file
 [[use_content_filtering]]
 == Use Content Filtering when using multiple Repositories
 
-When using multiple repositories, use <<filtering_repository_content.adoc#repository-content-filtering,repository content filtering>> to ensure that the correct artifacts are resolved from the appropriate repository.
+When using multiple repositories, use <<filtering_repository_content.adoc#repository-content-filtering,repository content filtering>> to ensure that dependencies are resolved from an appropriate repository.
 
 === Explanation
 
 If your build declares more than one repository, you should also declare content filters on these repositories to ensure you search for and obtain dependencies from the correct place.
 The repository that contains the remaining artifacts should come at the end, so we only query it if we don’t find the included modules in the other repositories.
 Another option is to use the <<filtering_repository_content.adoc#sec:declaring-content-repositories,exclusiveContent>> if you are able to. Here, the order doesn’t matter.
+
 Content filtering has three main benefits:
 
 - **Performance** since you only query one repository for a given artifact
-- **Security** by avoiding leaking what dependencies are used in a private project and being more resilient to supply chain attacks by specifying where each artifact is coming from
-- **Reliability** when some repositories contain invalid or incorrect metadata or artifacts
+- **Security**, by avoiding asking potentially every repository for every dependency (even ones they shouldn't contain), and improving resiliency to supply chain attacks by specifying exactly where to obtain each artifact
+- **Reliability**, by avoiding searching repositories that contain invalid or incorrect metadata or artifacts for particular dependencies
 
 === Example
 
