--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -606,7 +606,7 @@ The automatically available `buildSrc` is great for rapid prototyping, but it co
 
 One important caveat to this recommendation is when creating `Settings` plugins.
 Defining these in a `build-logic` project requires it to be included in the `pluginManagement` block of the main build's `settings.gradle(.kts)` file, in order to make these plugins available to the build early enough to be applied to the `Settings` instance.
-This is possible, but imposes a significant performance penalty and reduces Build Caching capability.
+This is possible, but reduces Build Caching capability, potentially impacting performance.
 
 Another potential reason to use `buildSrc` is if you have a very large number of subprojects within your included `build-logic`.
 Applying a different set of `build-logic` plugins to the subprojects in your _including_ build will result in a different classpath being used for each.
