--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -199,7 +199,7 @@ Common boundaries that make cohesive projects can include horizontal layers such
 - Vertical slices (e.g., feature modules each containing UI + business logic)
 - Inputs to source generation vs. their consumers
 - Or simply closely related classes.
-In general, it matters less _how_ you split your source than that you _do_ split it according to some reasonable scheme.
+Ultimately, the specific scheme matters less than ensuring that your build is split logically and consistently.
 
 Expanding a build to hundreds of projects is common, and Gradle is designed to scale to this size and beyond.
 In the extreme, tiny projects containing only a class or two are probably counterproductive.
