--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -495,3 +495,110 @@ include::sample[dir="snippets/bestPractices/noSourceInRoot-do/groovy/core",files
 === Tags
 
 `<<tags_reference.adoc#tag:structuring-builds,#structuring-builds>>`
+
+[[use_the_gradle_properties_file]]
+== Set build flags in `gradle.properties`
+:keywords: properties,structuring-builds
+
+Set Gradle build property flags in the `gradle.properties` file.
+
+=== Explanation
+
+Instead of using command-line options or environment variables, set build flags in the root project's `gradle.properties` file.
+
+Gradle comes with a long list of <<build_environment.adoc#sec:gradle_configuration_properties,Gradle properties>>, which have names that begin with `org.gradle` and can be used to configure the behavior of the build tool.
+You should familiarize yourself with these properties, which can have **enormous** impacts on your build's performance.
+
+You should not rely on supplying these properties on the CLI with every Gradle invocation.
+Providing these properties on the command line is meant for temporary testing and debugging, and is easy to forget across different environments.
+A permanent, idiomatic location to set and share these properties across different machines and between developers is in the `gradle.properties` file located in the root project directory.
+
+You should be aware of the default values of properties your build uses and avoid explicitly setting properties to their default values.
+If Gradle ever changes the default value of a property, this will not be a silent change, but will involve a standard <<feature_lifecycle.adoc#backwards_compatibility,deprecation cycle>>.
+
+NOTE: Properties set this way are not inherited across build boundaries when using <<composite_builds.adoc#composite_builds,composite builds>>.
+
+=== Example
+
+==== Don't Do This
+
+[.multi-language-sample]
+=====
+[source, kotlin]
+----
+├── lib
+│    ├── build.gradle.kts
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        ├── MyClass.java
+└── settings.gradle.kts
+----
+=====
+[.multi-language-sample]
+=====
+[source, groovy]
+----
+├── lib
+│    ├── build.gradle
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        ├── MyClass.java
+└── settings.gradle
+----
+=====
+
+This build supplies `-Dorg.gradle.caching=true` on the command line on every invocation.
+
+==== Do This Instead
+
+[.multi-language-sample]
+=====
+[source, kotlin]
+----
+├── lib
+│    ├── build.gradle.kts
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        ├── MyClass.java
+└── settings.gradle.kts
+----
+=====
+[.multi-language-sample]
+=====
+[source, groovy]
+----
+├── lib
+│    ├── build.gradle
+│    └── src
+│        └── main
+│            └── java
+│                └── org
+│                    └── example
+│                        ├── MyClass.java
+└── settings.gradle
+----
+=====
+
+====
+include::sample[dir="snippets/bestPractices/useTheGradlePropertiesFile-do/kotlin",files="gradle.properties[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/useTheGradlePropertiesFile-do/groovy",files="gradle.properties[tags=do-this]"]
+====
+
+<1> Set a gradle property in the `gradle.properties` file, so it is explicit and portable across different machines and environments.
+
+=== References
+
+- <<build_environment.adoc#sec:gradle_configuration_properties,Gradle properties>>
+
+=== Tags
+
+<<tags_reference.adoc#tag:properties,`#properties`>>
